change DependencyDto